--- a/.project
+++ b/.project
@@ -13,4 +13,24 @@
 	</buildSpec>
 	<natures>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1468540561881</id>
+			<name>src/app</name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.js</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1468540561884</id>
+			<name>src/app</name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.js.map</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
