--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lite": "lite-server",
     "test": "gulp test",
     "coveralls": "node ./node_modules/coveralls/bin/coveralls.js < ./report/remap/lcov.info",
-    "typings" : "typings"
+    "typings": "typings"
   },
   "keywords": [
     "angular2",
@@ -78,7 +78,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "lodash": "^4.13.1",
     "phantomjs-prebuilt": "^2.1.7",
-    "primeng": "^0.9.1",
+    "primeng": "^1.0.0-beta.9",
     "primeui": "^4.1.12",
     "remap-istanbul": "~0.6.4",
     "require-dir": "~0.3.0",
@@ -89,18 +89,15 @@
     "typings": "^1.3.1",
     "yargs": "^4.7.1",
     "zone.js": "^0.6.12",
-
     "es6-shim": "^0.35.0",
-    "primeng": "^1.0.0-beta.9",
-    "primeui": "^4.1.12",
-
     "express": "^4.14.0",
-     "path": "^0.12.7"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "browser-sync": "^2.13.0",
-    "connect-history-api-fallback": "^1.2.0",
     "concurrently": "^2.0.0",
+    "connect-history-api-fallback": "^1.2.0",
+    "gulp-gzip": "^1.4.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
     "typings": "^0.8.1"
