--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "gulp-uglify": "~1.5.4",
     "gulp-useref": "~3.1.0",
     "gulp-zip": "^3.2.0",
+    "gulp-gzip": "^1.4.0",
     "jasmine-core": "~2.4.1",
     "jquery": "^2.2.3",
     "karma": "~1.1.0",
@@ -91,7 +92,8 @@
     "zone.js": "^0.6.12",
     "es6-shim": "^0.35.0",
     "express": "^4.14.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",    
+    "connect" : "^2.30.2"
   },
   "devDependencies": {
     "browser-sync": "^2.13.0",
