--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=primeng-angular
-sonar.projectName=primeng-angular
+sonar.projectKey=cheetah
+sonar.projectName=cheetah
 sonar.projectVersion=1.0
 sonar.souceEncoding=UTF-8
 
