--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
-    "@angular/upgrade":  "2.0.0-rc.3",
     "@ngstarter/systemjs-extension": "1.0.0-rc.3",
     "angular2": "^2.0.0-beta.17",
     "bootstrap-sass": "^3.3.6",
@@ -93,7 +92,8 @@
     "es6-shim": "^0.35.0",
     "express": "^4.14.0",
     "path": "^0.12.7",
-    "connect" : "^2.30.2"
+    "connect" : "^2.30.2",
+    "reflect-metadata": "^0.1.2"
   },
   "devDependencies": {
     "browser-sync": "^2.13.0",
