Amplify Store for session and local storage and Intl for Currency Pipe
Amplify Store for session and local storage and Intl for Currency Pipe

--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
     "express": "^4.14.0",
     "path": "^0.12.7",
     "connect" : "^2.30.2",
-    "reflect-metadata": "^0.1.2"
+    "reflect-metadata": "^0.1.2",
+    "intl": "^1.2.4"
   },
   "devDependencies": {
     "browser-sync": "^2.13.0",
