--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=cheetah
-sonar.projectName=cheetah
+sonar.projectKey=EntityModelUI
+sonar.projectName=EntityModelUI
 sonar.projectVersion=1.0
 sonar.souceEncoding=UTF-8
 
