--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "EntityModelUI",
   "version": "1.0.0-rc.4",
   "author": "Sanket Sangwikar",
-  "description": "Speed of EntityModelUI for Customer Relations",
+  "description": "Generic EntityModelUI for code generator",
   "main": "src/tmp/app/main.js",
   "repository": {
     "type": "git",
