Fix build errors

--- a/package.json
+++ b/package.json
@@ -55,6 +55,32 @@
     "del": "~2.2.1",
     "font-awesome": "^4.6.3",
     "glob": "^7.0.5",
+    "lodash": "^4.13.1",
+    "primeng": "^1.0.0-beta.9",
+    "primeui": "^4.1.12",
+    "remap-istanbul": "~0.6.4",
+    "require-dir": "~0.3.0",
+    "run-sequence": "~1.2.2",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "^0.19.31",
+    "tslint": "^3.12.1",
+    "typings": "^1.3.1",
+    "yargs": "^4.7.1",
+    "zone.js": "^0.6.12",
+    "es6-shim": "^0.35.0",
+    "express": "^4.14.0",
+    "path": "^0.12.7",
+    "connect" : "^2.30.2",
+    "intl": "^1.2.4"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.13.0",
+    "concurrently": "^2.0.0",
+    "connect-history-api-fallback": "^1.2.0",
+    "gulp-gzip": "^1.4.0",
+    "lite-server": "^2.2.0",
+    "typescript": "^1.8.10",
+    "typings": "^0.8.1",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "~2.0.1",
@@ -76,33 +102,6 @@
     "karma-jasmine": "~1.0.2",
     "karma-phantomjs-launcher": "~1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "lodash": "^4.13.1",
-    "phantomjs": "^2.1.7",
-    "primeng": "^1.0.0-beta.9",
-    "primeui": "^4.1.12",
-    "remap-istanbul": "~0.6.4",
-    "require-dir": "~0.3.0",
-    "run-sequence": "~1.2.2",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "^0.19.31",
-    "tslint": "^3.12.1",
-    "typings": "^1.3.1",
-    "yargs": "^4.7.1",
-    "zone.js": "^0.6.12",
-    "es6-shim": "^0.35.0",
-    "express": "^4.14.0",
-    "path": "^0.12.7",
-    "connect" : "^2.30.2",
-    "reflect-metadata": "^0.1.2",
-    "intl": "^1.2.4"
-  },
-  "devDependencies": {
-    "browser-sync": "^2.13.0",
-    "concurrently": "^2.0.0",
-    "connect-history-api-fallback": "^1.2.0",
-    "gulp-gzip": "^1.4.0",
-    "lite-server": "^2.2.0",
-    "typescript": "^1.8.10",
-    "typings": "^0.8.1"
+    "phantomjs": "^2.1.7"
   }
 }
